// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`only renders content if its there 1`] = `null`;

exports[`only renders content if its there 2`] = `
<div
  className="root"
>
  <button
    className="is-hidden-tablet button is-white toggle"
    onClick={[Function]}
    type="button"
  >
    <Icon
      className={null}
      icon="angle-right"
      type="fas"
    />
  </button>
  <content
    className="sidebar"
    currentPage={null}
    onClick={[Function]}
  />
</div>
`;

exports[`should close when clicked outside 1`] = `
<div
  className="root open"
>
  <button
    className="is-hidden-tablet button is-white toggle"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-angle-left"
    />
  </button>
  <h1>
    beans
  </h1>
</div>
`;

exports[`should close when clicked outside 2`] = `
<div
  className="root"
>
  <button
    className="is-hidden-tablet button is-white toggle"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-angle-right"
    />
  </button>
  <h1>
    beans
  </h1>
</div>
`;

exports[`should open and close 1`] = `
<div
  className="root open"
>
  <button
    className="is-hidden-tablet button is-white toggle"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-angle-left"
    />
  </button>
  <h1>
    beans
  </h1>
</div>
`;

exports[`should open and close 2`] = `
<div
  className="root"
>
  <button
    className="is-hidden-tablet button is-white toggle"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-angle-right"
    />
  </button>
  <h1>
    beans
  </h1>
</div>
`;
